@@ -2203,6 +2203,7 @@ void ExultStudio::read_from_server
 	case Exult_server::locate_terrain:
 	case Exult_server::swap_terrain:
 	case Exult_server::insert_terrain:
+	case Exult_server::delete_terrain:
 	case Exult_server::locate_shape:
 	case Exult_server::game_pos:
 		if (waiting_for_server)	// Send msg. to callback.
