@@ -1,3 +1,8 @@
+2003-11-30    <jeff@mini.nerble.net>
+
+	* mapedit/chunklst.cc, etc.: Added a 'delete' option for
+	chunks.
+
 2003-11-29    <jeff@mini.nerble.net>
 
 	* usecode/ucinternal.h,intrinsics.cc:  Only force barge to do a
